@@ -14,25 +14,22 @@ import com.vtesdecks.model.api.ApiCrypt;
 import com.vtesdecks.model.api.ApiLibrary;
 import com.vtesdecks.model.api.ApiShop;
 import com.vtesdecks.util.VtesUtils;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ApiCardService {
-    @Autowired
-    private CryptCache cryptCache;
-    @Autowired
-    private LibraryCache libraryCache;
-    @Autowired
-    private CardShopRepository cardShopRepository;
-    @Autowired
-    private DeckCardRepository deckCardRepository;
-    @Autowired
-    private ApiCardMapper apiCardMapper;
+    private final CryptCache cryptCache;
+    private final LibraryCache libraryCache;
+    private final CardShopRepository cardShopRepository;
+    private final DeckCardRepository deckCardRepository;
+    private final ApiCardMapper apiCardMapper;
 
     public ApiCrypt getCrypt(Integer id, String locale) {
         Crypt crypt = cryptCache.get(id);
@@ -72,7 +69,7 @@ public class ApiCardService {
         }
         return result.stream()
                 .map(card -> apiCardMapper.mapLibrary(card, locale, null))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ApiLibrary getLibraryLastUpdate() {
@@ -80,9 +77,27 @@ public class ApiCardService {
         return apiCardMapper.mapLibrary(library, null, null);
     }
 
-    public List<ApiShop> getCardShops(Integer cardId) {
+    public List<ApiShop> getCardShops(Integer cardId, Boolean showAll) {
         List<CardShopEntity> cardShopList = cardShopRepository.findByCardId(cardId);
-        return apiCardMapper.mapCardShop(cardShopList);
+        if (Boolean.TRUE.equals(showAll)) {
+            return apiCardMapper.mapCardShop(cardShopList.stream()
+                    .filter(cardShop -> cardShop.getPlatform().isEnabled())
+                    .toList());
+        }
+        return apiCardMapper.mapCardShop(cardShopList.stream()
+                .filter(cardShop -> cardShop.getPlatform().isEnabled())
+                .collect(Collectors.groupingBy(CardShopEntity::getPlatform))
+                .values()
+                .stream()
+                .map(shops -> shops.stream()
+                        .filter(shop -> shop.getSet() == null)
+                        .findFirst()
+                        .orElseGet(() -> shops.stream()
+                                .min(Comparator.comparing(CardShopEntity::getPrice))
+                                .orElseGet(shops::getFirst))
+                )
+                .sorted(Comparator.comparing(CardShopEntity::getPrice))
+                .toList());
     }
 
     public List<Object> searchCards(String query) {
